Update Segmenting and Clustering all Neighborhoods in Toronto Area.ipynb

--- a/Segmenting and Clustering all Neighborhoods in Toronto Area.ipynb
+++ b/Segmenting and Clustering all Neighborhoods in Toronto Area.ipynb
@@ -1307,8 +1307,8 @@
    "outputs": [],
    "source": [
     "# @hidden_cell\n",
-    "CLIENT_ID = '4HIB1H5CLMU0XRNELI2TU3WZGESDRGNPCGJE4TNLGEW4JH4D' # Foursquare ID\n",
-    "CLIENT_SECRET = 'C1E2D0SZQJHC0GNCWHK3WSICRI1UXCD5V41ICV0AFR1PNONJ' # Foursquare Secret\n",
+    "CLIENT_ID = 'XXX' # Foursquare ID\n",
+    "CLIENT_SECRET = 'YYY' # Foursquare Secret\n",
     "VERSION = '20180604'\n",
     "LIMIT = 30"
    ]
