Update Segmenting and Clustering Neighborhoods in Downtown Toronto-SG.ipynb

--- a/Segmenting and Clustering Neighborhoods in Downtown Toronto-SG.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Downtown Toronto-SG.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## All three responses for the Assignment are in this notebook, marked by Question number\n",
     "\n",
-    "### Note - a copy rendering the maps is located at here: "
+    "### Note - a copy rendering the maps is located at here: https://nbviewer.jupyter.org/github/sgatea/Coursera_Capstone/blob/master/Segmenting%20and%20Clustering%20Neighborhoods%20in%20Downtown%20Toronto-SG.ipynb"
    ]
   },
   {
